infrastructure/apps/staging/20-worker.yml
apiVersion: v1
kind: Pod
metadata:
  name: worker
  namespace: magicbox
spec:
  containers:
  - name: worker
    image: nielsgregers/magicbox-workers:latest
