infrastructure/apps/staging/30-web.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: magicbox
spec:
  containers:
  - name: web
    image: nielsgregers/magicbox-web:latest
