infrastructure/apps/staging/40-webservice.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: magicbox
spec:
  type: ClusterIP
  # Uncomment the below line to create a Headless Service
  # clusterIP: None
  selector:
    app: web
  ports:
    - name: http-port
      protocol: TCP
      port: 3000
      targetPort: 3000
